Added order-collector microservice; Added order-api module; Updated order microservice; Added communication between order-collector and order microservices using rabbitmq

--- a/apps/order/.env.sample
+++ b/apps/order/.env.sample
@@ -1,2 +1,6 @@
 # Port on which app runs
 PORT = 3000
+
+# RabbitMQ setup for microservice
+RABBIT_MQ_URI = 'amqp://rabbitmq:5672'
+RABBIT_MQ_ORDER_COLLECTOR_QUEUE = 'order-collector'
