--- a/package.json
+++ b/package.json
@@ -18,18 +18,24 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./apps/ordering-app/test/jest-e2e.json",
-    "knex:run": "knex --knexfile libs/common/src/knex/knex.configuration.ts",
+    "knex:run": "knex --knexfile libs/common/src/database/knex/knex.configuration.ts",
     "migration:create": "npm run knex:run -- migrate:make --",
     "migration:up": "npm run knex:run -- migrate:up",
     "migration:rollback": "npm run knex:run -- migrate:rollback --all --debug",
     "migration:list": "npm run knex:run -- migrate:list"
   },
   "dependencies": {
-    "@nestjs/common": "9.0.0",
+    "@nestjs/axios": "3.0.2",
+    "@nestjs/common": "10.3.3",
     "@nestjs/config": "3.2.0",
-    "@nestjs/core": "9.0.0",
+    "@nestjs/core": "10.3.3",
     "@nestjs/mapped-types": "2.0.5",
-    "@nestjs/platform-express": "9.0.0",
+    "@nestjs/microservices": "10.3.3",
+    "@nestjs/platform-express": "10.3.3",
+    "@nestjs/schedule": "4.0.1",
+    "amqp-connection-manager": "4.1.14",
+    "amqplib": "0.10.3",
+    "axios": "1.6.7",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "dotenv": "16.4.5",
@@ -43,7 +49,7 @@
   "devDependencies": {
     "@nestjs/cli": "9.0.0",
     "@nestjs/schematics": "9.0.0",
-    "@nestjs/testing": "9.0.0",
+    "@nestjs/testing": "10.3.3",
     "@types/express": "4.17.13",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
