Added notification module; Added communication between order-collector and notification modules; Updated collectOrders method; Added graphql to notification module

--- a/apps/order-collector/.env.sample
+++ b/apps/order-collector/.env.sample
@@ -1,6 +1,7 @@
 # RabbitMQ setup for microservice
 RABBIT_MQ_URI = 'amqp://rabbitmq:5672'
 RABBIT_MQ_ORDER_COLLECTOR_QUEUE = 'order-collector'
+RABBIT_MQ_NOTIFICATION_QUEUE = 'notification'
 
 # Base url for order api
 BASE_URL = 'https://dummyjson.com'
