--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "migration:list": "npm run knex:run -- migrate:list"
   },
   "dependencies": {
+    "@apollo/server": "4.10.1",
+    "@nestjs/apollo": "12.1.0",
     "@nestjs/axios": "3.0.2",
     "@nestjs/common": "10.3.3",
     "@nestjs/config": "3.2.0",
     "@nestjs/core": "10.3.3",
+    "@nestjs/graphql": "12.1.1",
     "@nestjs/mapped-types": "2.0.5",
     "@nestjs/microservices": "10.3.3",
     "@nestjs/platform-express": "10.3.3",
@@ -39,6 +42,9 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "dotenv": "16.4.5",
+    "graphql": "16.8.1",
+    "graphql-scalars": "1.22.5",
+    "graphql-subscriptions": "2.0.0",
     "joi": "17.12.2",
     "knex": "3.1.0",
     "lodash": "4.17.21",
