--- a/package.json
+++ b/package.json
@@ -39,18 +39,22 @@
     "amqp-connection-manager": "4.1.14",
     "amqplib": "0.10.3",
     "axios": "1.6.7",
+    "bcryptjs": "2.4.3",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
+    "dayjs": "1.11.10",
     "dotenv": "16.4.5",
     "graphql": "16.8.1",
     "graphql-scalars": "1.22.5",
     "graphql-subscriptions": "2.0.0",
     "joi": "17.12.2",
+    "jsonwebtoken": "9.0.2",
     "knex": "3.1.0",
     "lodash": "4.17.21",
     "pg": "8.11.3",
     "reflect-metadata": "0.1.13",
-    "rxjs": "7.2.0"
+    "rxjs": "7.2.0",
+    "uuid": "9.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "9.0.0",
