Added sign in method; Added private and public keys for rs256 algorithm

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -74,6 +74,7 @@ services:
     volumes:
       - .:/usr/src/app
       - /usr/src/app/node_modules
+      - ${KEYS_FOLDER_FULL_PATH}:/usr/src/keys
     env_file:
       - ./apps/auth/.env
     depends_on:
