--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,6 @@ DB_USER = 'your db user'
 DB_PASSWORD = 'your db password'
 DB_DATABASE = 'orders'
 DB_PORT = 5432
+
+# Using for Docker configuration
+KEYS_FOLDER_FULL_PATH = 'absolute path to keys folder'
